Fixing small text clipping / alignment issue

--- a/scss/components/_calendar.scss
+++ b/scss/components/_calendar.scss
@@ -145,14 +145,14 @@
 
 .fc-title {
   display: inline-block;
-  height: 1.2rem;
   width: 100%;
   overflow: hidden;
+  vertical-align: top;
 }
 
 .fc-time {
   display: inline-block;
-  height: 1.2rem;
+  vertical-align: top;
 }
 
 .fc-limited {
